--- a/lib/ui/inputs/number/slider.css
+++ b/lib/ui/inputs/number/slider.css
@@ -3,3 +3,71 @@
   grid-template-columns: 1fr 40px;
   grid-gap: 16px;
 }
+
+.slider,
+.number-input {
+  display: block;
+  margin: 0;
+  appearance: none;
+  outline: none;
+
+  &:disabled {
+    opacity: 0.5;
+  }
+}
+
+.slider {
+  grid-column: 1fr;
+  width: 100%;
+  height: 16px;
+  background: var(--bg-msgrey);
+  box-sizing: content-box;
+  border: var(--border-inset-grey);
+
+  &::-webkit-slider-track {
+    width: 100%;
+    height: 4px;
+    background: #555;
+  }
+
+  &::-webkit-slider-thumb {
+    appearance: none;
+    width: 16px;
+    height: 16px;
+    background: var(--bg-msgrey);
+    cursor: pointer;
+    border: var(--border-outset-grey);
+  }
+
+  &::-moz-range-track {
+    width: 100%;
+    height: 4px;
+    background: #555;
+    border: none;
+  }
+
+  &::-moz-range-thumb {
+    width: 16px;
+    height: 16px;
+    background: #007acc;
+    cursor: pointer;
+    border: none;
+  }
+}
+
+.number-input {
+  grid-column: span 1;
+  border-radius: 0;
+  background: transparent;
+  border: none;
+  font-size: 0.775rem;
+  font-family: inherit;
+  color: inherit;
+  min-width: 0;
+
+  &::-webkit-inner-spin-button,
+  &::-webkit-outer-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+  }
+}
