--- a/lib/ui/navigation/style.css
+++ b/lib/ui/navigation/style.css
@@ -1,10 +1,10 @@
 .navigation {
-  boxSizing: border-box;
+  box-sizing: border-box;
   width: 100%;
   height: 100%;
   background: var(--bg-black-0f);
-  borderRight: var(--border-solid-grey);
-  borderRightWidth: 1px;
+  border-right: var(--border-solid-grey);
+  border-right-width: 1px;
   padding: 11px;
   overflow: auto;
 }
