--- a/lib/ui/inputs/number/slider.css
+++ b/lib/ui/inputs/number/slider.css
@@ -1,3 +1,11 @@
+:host {
+  --slider-height: 16px;
+}
+
+@media (pointer: fine)  {
+  :host { --slider-height: 12px; }
+}
+
 .container {
   display: grid;
   grid-template-columns: 1fr 40px;
@@ -19,7 +27,7 @@
 .slider {
   grid-column: 1fr;
   width: 100%;
-  height: 16px;
+  height: var(--slider-height);
   background: var(--bg-msgrey);
   box-sizing: content-box;
   border: var(--border-inset-grey);
@@ -33,8 +41,8 @@
 
   &::-webkit-slider-thumb {
     appearance: none;
-    width: 16px;
-    height: 16px;
+    width: var(--slider-height);
+    height: var(--slider-height);
     background: var(--bg-msgrey);
     cursor: pointer;
     border: var(--border-outset-grey);
@@ -49,8 +57,8 @@
   }
 
   &::-moz-range-thumb {
-    width: 16px;
-    height: 16px;
+    width: var(--slider-height);
+    height: var(--slider-height);
     background: #007acc;
     cursor: pointer;
     border: none;
