--- a/lib/ui/chrome/application/style.css
+++ b/lib/ui/chrome/application/style.css
@@ -1,7 +1,29 @@
 @import './lib/ui/base/reset.css';
 @import './lib/ui/application/style-shared.css';
 
+:host {
+  --multi-app-gridTemplateColumns: 1fr;
+}
+
 .user-content {
   overflow-y: auto;
   overflow-x: hidden;
+
+  & > article.multi {
+    display: grid;
+    grid-auto-flow: row;
+    grid-auto-rows: auto;
+    padding: 32px;
+    gap: 16px;
+    width: 100%;
+    grid-template-columns: var(--multi-app-gridTemplateColumns);
+    align-content: start;
+
+    & canvas {
+      display: block;
+      border: solid 2px #666;
+    }
+  }
 }
+
+
