--- a/lib/app/sec-unsw/sec-2206/sec-03-1/styles.css
+++ b/lib/app/sec-unsw/sec-2206/sec-03-1/styles.css
@@ -16,15 +16,17 @@ th.denominator-df {
   }
 }
 
-summary.grid-layout {
+summary {
   display: grid;
   grid-auto-flow: column;
   grid-template-columns: auto 1fr;
   grid-gap: 8px;
   align-items: center;
 
-  &, & > h4 { background: var(--bg-pink); }
-  & > h4 { color: var(--fg-black-on-pink); }
+  &.pink {
+    &, & > h4 { background: var(--bg-pink); }
+    & > h4 { color: var(--fg-black-on-pink); }
+  }
 
   &::before {
     content: '▶';
@@ -32,10 +34,10 @@ summary.grid-layout {
     width: auto;
     display: block;
     padding-inline: 8px 4px;
-    transform: translateY(-1px);
+    transform: translateY(-2px);
   }
 
   details[open] &::before {
-    transform: rotate(90deg);
+    transform: translateY(-2px) rotate(90deg);
   }
 }
