--- a/style.css
+++ b/style.css
@@ -111,31 +111,16 @@ body {
 }
 
 .header {
-  display: grid;
-  grid-template-columns: 1fr auto;
-  grid-template-rows: 20px;
-  align-items: center;
-  background: var(--bg-blue);
-  color: var(--fg-white-on-blue);
-  padding: 8px 8px 8px 13px;
+  --container-padding: 8px 8px 8px 13px;
+  &:is(header) { padding: var(--container-padding); }
 
-  & > h1 {
-    font-size: 14px;
+  background: var(--bg-blue);
+
+  & > h1[slot=title] {
+    font-size: 12px;
+    color: var(--fg-white-on-blue);
     margin: 0;
     line-height: 1;
-  }
-}
-
-#buttons {
-  display: grid;
-  grid-template-columns: 1fr;
-  grid-gap: 8px;
-  grid-auto-flow: column;
-
-  & > button {
-    padding: 2px 8px 2px;
-    border-radius: 0;
-    font-family: monospace;
   }
 }
 
