less annoying fade in

--- a/lib/ui/inputs/button.css
+++ b/lib/ui/inputs/button.css
@@ -5,6 +5,7 @@
   --grey-f: color(srgb 0.7529 0.7529 0.753);
   --button-color: black;
   --shadow: color-mix(in oklch, transparent 80%, black);
+  transition: var(--transition-rule-opacity);
 }
 
 .button {
