--- a/lib/ui/layout/tabs/style.css
+++ b/lib/ui/layout/tabs/style.css
@@ -25,8 +25,9 @@ nav {
 .tablist {
   display: grid;
   grid-auto-flow: column;
+  grid-template-rows: 1fr;
   grid-auto-columns: max-content;
-  grid-gap: 1px;
+  grid-gap: 3px;
   list-style: none;
   justify-content: start;
   margin: 1px;
