--- a/lib/ui/layout/tabs/style.css
+++ b/lib/ui/layout/tabs/style.css
@@ -4,14 +4,14 @@
   width: 100%;
   display: grid;
   grid-template-columns: 1fr;
-  grid-auto-flow: row;
-  grid-auto-columns: auto;
-  grid-gap: 4px;
+  grid-template-rows: min-content auto 1fr;
+  max-height: 100%;
 }
 
 hr {
   height: 2px;
   width: 100%;
+  margin: 0;
   display: block;
   border: none;
   background: var(--bg-blue);
@@ -19,6 +19,7 @@ hr {
 
 nav {
   width: 100%;
+  padding: 4px;
   overflow: auto;
 }
 
@@ -47,4 +48,10 @@ nav {
     border: var(--border-inset-grey);
     border-width: 2px;
   }
+}
+
+.content {
+  padding: 4px;
+  max-height: 100%;
+  overflow-y: auto;
 }
