--- a/lib/ui/chrome/navigation/app_explorer/style.css
+++ b/lib/ui/chrome/navigation/app_explorer/style.css
@@ -2,10 +2,11 @@
   transition: opacity 0.5s steps(5, end);
 }
 
+* { font-family: var(--fontfamily-default); }
+
 h3 {
   margin: 0 0 16px 0;
   color: var(--fb-white);
-  font-family: monospace;
 }
 
 details {
@@ -18,6 +19,7 @@ summary {
   background: var(--bg-black-2a);
   user-select: none;
   font-weight: bold;
+  font-size: var(--fontsize-body-m);
 }
 
 summary:hover {
@@ -32,11 +34,10 @@ details > :is(.menu-item, details) {
   padding: 4px 8px;
   background: var(--bg-black);
   cursor: pointer;
-  font-size: 12px;
+  font-size: var(--fontsize-body-s);
   color: var(--fg-white);
   text-decoration: none;
   display: block;
-  font-family: monospace;
 }
 
 .menu-item:hover {
