--- a/lib/prelude/university/styles.css
+++ b/lib/prelude/university/styles.css
@@ -32,6 +32,10 @@ details {
     font-weight: bold;
   }
 
+  & > summary > :is(blockquote, p, h1, h2, h3, h4, h5, h6) {
+    display: inline-block;
+  }
+
   & > *:not(summary) {
     color: var(--fg-white-cc);
   }
